# cmake-use

./: README.md
0.git笔记/: git笔记.md
01/: CMakeLists.txt  README.md
02/: CMakeLists.txt  README.md
02/include/: test.hpp
02/src/: add.cpp  main.cpp
03/: CMakeLists.txt  README.md
03/src/: sub.cpp
04/: CMakeLists.txt  README.md
05/: CMakeLists.txt  README.md  main.cpp
06/: CMakeLists.txt  README.md
06/include/: test.h
06/src/: main.cpp  test.c
